re-parse-proc-macro/tests/compile_fail/parse_errors/empty_ident.stderr
error: Expected an identifier, got '}'
 --> tests/compile_fail/parse_errors/empty_ident.rs:4:15
  |
4 |     re_parse!("{}", "111B222");
  |               ^^^^
